--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 header {
     color: white;
     background-color: black;
-    width: 100%;
     text-align: center;
     padding-top: 40px;
     padding-bottom: 40px;
@@ -31,11 +30,44 @@ section {
 
 #bienvenidos img{
     width: 100%;
+    border: 1px solid lightgray;
+}
+
+#recomendados {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
+
+.card {
+    border: 1px solid lightgrey;
+    box-sizing: border-box;
+    /* flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 33.3333%; */
+    flex: 0 0 33.3333%;
+}
+
+.card img {
+    width: 100%;
+} 
+
+.card h3, p {
+    padding: 5px;
 }
 
 #destinos select {
     width: 100%;
     padding: 5px;
+    border: 1px solid lightgrey;
+}
+
+footer {
+    color: white;
+    background-color: black;
+    text-align: center;
+    padding: 15px;
+    margin-top: 40px;
 }
 
 @media screen and (max-width:1200px){
@@ -43,11 +75,17 @@ section {
         margin-left: 10%;
         margin-right: 10%;
     }
+    .card {
+        flex: 0 0 50%;
+    }
 }
 
 @media screen and (max-width:600px){
     main {
         margin-left: 5%;
         margin-right: 5%;
+    }
+    .card {
+        flex: 0 0 100%;
     }
 }
